// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormAction custom offset 1`] = `
<div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-col-offset-8 ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <button
            class="ant-btn ant-btn-primary"
            type="submit"
          >
            <span>
              提 交
            </span>
          </button>
          <div
            class="css-1pq8zek"
          >
            <a
              class="btn btn-secondary"
              href="/"
            >
              返回列表
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormAction render 1`] = `
<div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-col-8 ant-col-offset-4 ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <button
            class="ant-btn ant-btn-primary"
            type="submit"
          >
            <span>
              提 交
            </span>
          </button>
          <div
            class="css-1pq8zek"
          >
            <a
              class="btn btn-secondary"
              href="/"
            >
              返回列表
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
